examples/test/testpolicy6921.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6921
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key43: value47
      key25: value17
      key36: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value44
      podSelector:
        matchLabels:
          key9: value15
          key14: value42
